--- a/index.html
+++ b/index.html
@@ -113,12 +113,23 @@
     </div>
     <!-- nav结束 -->
     <!-- banner开始 -->
-    <div id="banner" class="contaner">
+    <div id="banner">
         <div class="banner inner">
-
+            <div class="b_img b1"><img src="images/banner/b1.png" alt=""></div>
+            <div class="b_img b2"><img src="images/banner/b2.jpg" alt=""></div>
+            <div class="b_img b3"><img src="images/banner/b3.jpg" alt=""></div>
+            <div class="b_img b4"><img src="images/banner/b4.jpg" alt=""></div>
+            <a href="#" class="banner-button right">></a>
+            <a href="#" class="banner-button left"><</a>
         </div>
     </div>
+
     <!-- banner结束 -->
+    <!-- new开始 -->
+    <div id="news">
+
+    </div>
+    <!-- new结束 -->
 </body>
 <script src="js/script.js"></script>
 </html>
