轮播图按钮优化

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
     <!-- banner开始 -->
     <div id="banner">
         <div class="banner inner">
-            <div class="b_img b1"><img src="images/banner/b1.png" alt=""></div>
-            <div class="b_img b2"><img src="images/banner/b2.jpg" alt=""></div>
-            <div class="b_img b3"><img src="images/banner/b3.jpg" alt=""></div>
-            <div class="b_img b4"><img src="images/banner/b4.jpg" alt=""></div>
+            <div class="b_img" id="front_banner"><img src="images/banner/b1.png" alt=""></div>
+            <div class="b_img"><img src="images/banner/b2.jpg" alt=""></div>
+            <div class="b_img"><img src="images/banner/b3.jpg" alt=""></div>
+            <div class="b_img"><img src="images/banner/b4.jpg" alt=""></div>
             <a href="#" class="banner-button right">></a>
             <a href="#" class="banner-button left"><</a>
         </div>
