--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
         <div class="banner inner">
             <div class="b_img" id="front_banner"><img src="images/banner/b1.png" alt=""></div>
             <div class="b_img"><img src="images/banner/b2.jpg" alt=""></div>
-            <div class="b_img"><img src="images/banner/b3.jpg" alt=""></div>
-            <div class="b_img"><img src="images/banner/b4.jpg" alt=""></div>
+            <div class="b_img"><img src="images/banner/b3.jpg" alt="西华大学举行第四届教学优秀奖决赛"></div>
+            <div class="b_img"><img src="images/banner/b4.jpg" alt="车振明教授获四川省师德演讲比赛"></div>
             <a href="#" class="banner-button right">></a>
             <a href="#" class="banner-button left"><</a>
+            <h2 id="b_discription"></h2>
         </div>
     </div>
 
