--- a/index.html
+++ b/index.html
@@ -113,24 +113,81 @@
     </div>
     <!-- nav结束 -->
     <!-- banner开始 -->
-    <div id="banner">
+    <div id="banner" class="grey_background">
         <div class="banner inner">
-            <div class="b_img" id="front_banner"><img src="images/banner/b1.png" alt=""></div>
-            <div class="b_img"><img src="images/banner/b2.jpg" alt=""></div>
+            <div class="b_img" id="front_banner"><img src="images/banner/b1.png" alt="车振明教授获四川省师德演讲比赛"></div>
+            <div class="b_img"><img src="images/banner/b2.jpg" alt="小暑"></div>
             <div class="b_img"><img src="images/banner/b3.jpg" alt="西华大学举行第四届教学优秀奖决赛"></div>
-            <div class="b_img"><img src="images/banner/b4.jpg" alt="车振明教授获四川省师德演讲比赛"></div>
+            <div class="b_img"><img src="images/banner/b4.jpg" alt="Add discription"></div>
+            <div class="b_img"><img src="images/banner/b5.jpg" alt="大暑"></div>
             <a href="#" class="banner-button right">></a>
             <a href="#" class="banner-button left"><</a>
-            <h2 id="b_discription"></h2>
+            <h2 id="b_discription">Add discription</h2>
         </div>
     </div>
 
     <!-- banner结束 -->
     <!-- new开始 -->
     <div id="news">
-
+        <div class="news inner">
+            <div id="news_head">
+                <h3>综合新闻</h3>
+                <a href="#">>>进入新闻网</a>
+            </div>
+            <div id="news_pic">
+                <img src="images/news.jpg" alt="">
+                <div>学校召开2019版blablabla</div>
+            </div>
+            <div id="news_right">
+                <li>
+                    <a href="#">“创新创业”全国管理决策模拟大赛总决赛中西华学子荣获佳绩</a>
+                    <span>2019-07-24</span>
+                </li>
+                <li>
+                    <a href="#">“创新创业”全国管理决策模拟大赛总决赛中西华学子荣获佳绩</a>
+                    <span>2019-07-24</span>
+                </li>
+                <li>
+                    <a href="#">“创新创业”全国管理决策模拟大赛总决赛中西华学子荣获佳绩</a>
+                    <span>2019-07-24</span>
+                </li>
+                <li>
+                    <a href="#">“创新创业”全国管理决策模拟大赛总决赛中西华学子荣获佳绩</a>
+                    <span>2019-07-24</span>
+                </li>
+                <li>
+                    <a href="#">“创新创业”全国管理决策模拟大赛总决赛中西华学子荣获佳绩</a>
+                    <span>2019-07-24</span>
+                </li>
+                <li>
+                    <a href="#">“创新创业”全国管理决策模拟大赛总决赛中西华学子荣获佳绩</a>
+                    <span>2019-07-24</span>
+                </li>
+                <li>
+                    <a href="#">“创新创业”全国管理决策模拟大赛总决赛中西华学子荣获佳绩</a>
+                    <span>2019-07-24</span>
+                </li>
+                <li>
+                    <a href="#">“创新创业”全国管理决策模拟大赛总决赛中西华学子荣获佳绩</a>
+                    <span>2019-07-24</span>
+                </li>
+            </div>
+        </div>
+        
     </div>
     <!-- new结束 -->
+    <!-- scholar开始 -->
+    <div id="scholar">
+        <div class="scholar inner">
+            <div id="scholar_report">
+
+            </div>
+            <div id="scholar_news">
+                
+            </div>
+        </div>
+    </div>
+    <!-- scholar结束 -->
 </body>
 <script src="js/script.js"></script>
 </html>
